@@ -1,1 +1,20 @@
 # SP_MazeGame
+
+
+<h2>Set up</h2>
+<ol>
+  <li> Download and add the Javafx-sdk to project dependencies</li>
+  https://www.oracle.com/java/technologies/install-javafx-sdk.html
+<li>Add the folowing to VM Options (changing the path for your machine)</br> </li>
+<code>
+  --module-path
+  "D:\Java\javafx-sdk-15.0.1\lib"
+  --add-modules
+  javafx.controls,javafx.fxml
+</code>
+</ol>
+
+<h2>Model-View-Controller Design</h2>
+
+![image](https://user-images.githubusercontent.com/62744819/109699821-f0c2d080-7b88-11eb-809a-449102846a6d.png)
+![image](https://user-images.githubusercontent.com/62744819/109699843-f5878480-7b88-11eb-8d64-cd797a313db3.png)
